added the second and third blog

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -3,9 +3,10 @@ div{
     border: 5px solid salmon;
     padding: 5px;
     /* width: 15px; */
-     height: 20px; 
+     /* height: 10px;  */
 }
 h3{
     text-align: center;
     border: 20px solid green;
+    text-shadow: 20px purple;
 }
